[package]
name = "dieselRust"
version = "0.1.0"
edition = "2023"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "1.3.2", features = ["v4","v5"] }
diesel = {version = "2.0.3", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json", "numeric"]}
chrono = "0.4"